Fix alignment of navbar header in fixed navbars

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -112,6 +112,10 @@
   // Undo the rounded corners
   @media (min-width: @grid-float-breakpoint) {
     border-radius: 0;
+
+    .navbar-header {
+      margin-left: -@navbar-padding-horizontal;
+    }
   }
 }
 .navbar-fixed-top {
